# coupling-cpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
